<resources>
    <string name="app_name">易知海外</string>

    <!-- UI messages -->
    <string name="home">主页</string>
    <string name="setting">设置</string>
    <string name="changeRoleToSeller">切换为卖家</string>
    <string name="changeRoleToCustomer">切换为买家</string>
    <string name="back">返回</string>

    <string name="discoverEknow">求易知</string>
    <string name="createEknow">发易知</string>
    <string name="mine">我的</string>

    <!-- Service Pages messages -->
    <string name="category">分类</string>
    <string name="recommendation">精品推荐</string>
    <string name="servicesList">服务列表</string>
    <string name="serviceDetails">服务详情</string>
    <string name="serviceBuySummary">购买服务</string>
    <string name="serviceAdd">发布易知服务</string>

    <string name="serviceId">服务编号</string>
    <string name="serviceName">服务名称</string>
    <string name="serviceBrief">服务内容简介</string>
    <string name="brief">内容简介</string>
    <string name="serviceDescription">服务内容详细信息</string>
    <string name="serviceInfo">服务信息</string>
    <string name="serviceRating">服务等级</string>
    <string name="serviceType">服务类型</string>
    <string name="tourism">旅游</string>
    <string name="overseasStudy">留学</string>
    <string name="serviceArea">服务地点</string>
    <string name="serviceLanguage">服务语言</string>
    <string name="languageChinese">中文普通话</string>
    <string name="languageEnglish">英语</string>
    <string name="languageLocal">当地语言</string>
    <string name="servicePriceType">收费类型</string>
    <string name="servicePriceByHour">按小时(￥/小时)</string>
    <string name="servicePriceByCount">按次数(￥/次)</string>
    <string name="servicePrice">服务价格</string>
    <string name="serviceUnitPrice">费用单价</string>
    <string name="serviceTag">服务标签</string>
    <string name="serviceSelectTag">点击选取或填写标签</string>


    <string name="sellerName">卖家昵称</string>
    <string name="sellerSignature">个性签名</string>
    <string name="sellerDescription">卖家介绍</string>
    <string name="sellerInfo">卖家信息</string>
    <string name="sellerRating">卖家等级</string>
    <string name="sellerTag">卖家标签</string>
    <string name="sellerHomepage">卖家主页</string>

    <string name="commentCustomerName">评论者</string>
    <string name="commentRating">打分</string>
    <string name="commentContent">意见</string>
    <string name="commentDate">日期</string>

    <string name="serviceBuy">购买</string>
    <string name="serviceHoursCount">服务、咨询时长</string>
    <string name="serviceTotalPrice">服务总价格(￥)</string>
    <string name="serviceQuestion">咨询话题</string>
    <string name="serviceStartDate">预计消费日期</string>
    <string name="servicePeopleCount">预计消费人数</string>
    <string name="serviceLicenseRead">点击阅读购买服务声明</string>
    <string name="serviceLicenseAgree">我同意上述服务声明</string>
    <string name="servicePay">去付款</string>

    <string name="serviceStatus">服务状态</string>
    <string name="serviceUploadMainPic">请点击图标上传服务主图片, 主图片显示于求易知列表.</string>
    <string name="serviceUploadPics">请点击图标上传服务详情图片, 最多上传5张.</string>
    <string name="croperServiceMainImage">选取服务主图片</string>
    <string name="serviceEditTags">编辑标签</string>
    <string name="serviceTags">标签</string>


    <!-- Users Pages -->
    <string name="signIn">登录</string>
    <string name="securityMessage">提示:保护您个人信息的隐私和安全是易知海外的头等大事。我们加密存储、传输您的个人信息。在未经您书面授权的情况下，我们不会将您的个人资料透露给第三方。</string>
    <string name="selectRegionNumber">地区号:</string>
    <string name="inputPhoneNumber">手机号码:</string>
    <string name="inputPassword">密码:</string>
    <string name="selectRegionNumberHint">请选择地区号:</string>
    <string name="inputPhoneNumberHint">请输入手机号码:</string>
    <string name="inputPasswordHint">请输入密码:</string>
    <string name="validation_phone">手机号码不能为空</string>
    <string name="validation_phone_length">手机号码位数不足</string>
    <string name="validation_password">密码不能为空</string>

    <!-- Data String -->
    <string name="world">地球</string>

    <!-- 图片浏览 --><!--String from upload image plugin-->

    <string name="selectPicture">选择图片</string>
    <string name="viewPicture">查看图片</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="deletePicture">删除</string>
    <string name="no_photo">相册没有图片</string>
    <string name="phote_cropper">截取图片</string>
</resources>
