<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seller_name_title"
        android:text="@string/sellerName"
        android:textSize="12sp"
        android:textColor="@color/eknowTitle"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_name_content"
        android:text="111"
        android:textSize="10sp"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_name_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seller_signature_title"
        android:text="@string/sellerSignature"
        android:textSize="12sp"
        android:textColor="@color/eknowTitle"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_name_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_signature_content"
        android:text="222"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_signature_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seller_description_title"
        android:text="@string/sellerDescription"
        android:textSize="12sp"
        android:textColor="@color/eknowTitle"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_signature_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seller_description_content"
        android:text=""
        android:inputType="textMultiLine"
        android:textSize="10sp"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_description_title"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seller_info_title"
        android:text="@string/serviceInfo"
        android:textSize="12sp"
        android:textColor="@color/eknowTitle"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_description_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/seller_rating_title"
        android:text="@string/sellerRating"
        android:textSize="11sp"
        android:background="@color/gray_bright"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:paddingLeft="@dimen/content_padding_left"
        android:paddingRight="@dimen/content_padding_right"
        android:layout_below="@+id/seller_info_title"/>

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator= "true"
        android:rating = "3"
        android:stepSize = "0.1"
        android:layout_alignTop="@+id/seller_rating_title"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right_star"
        android:layout_marginTop="7dp"
        android:progressTint="@color/Orange"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seller_tag_title"
        android:text="@string/serviceTag"
        android:textSize="12sp"
        android:textColor="@color/eknowTitle"
        android:gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_below="@+id/seller_rating_title"/>

    <GridView
        android:id="@+id/sellerTagGridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_below="@+id/seller_tag_title"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        />

</RelativeLayout>